--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,12 @@ a{
   color: var(--primaryColor)
 }
 /* end of utility/ helper classes */
+/* clearfix */
+.clearfix::after, .clearfix::before{
+  content: "";
+  clear: both;
+  display: table;
+}
 /* global */
 /* navbar */
 /* header */
@@ -49,14 +55,16 @@ a{
    text-align: center; 
    transform: translate(-50%, -50%);  
    letter-spacing: var(--letterSpacing);
+   transition: var(--mainTransition);
 }
+
 
 .banner-subtitle{
   font-size: 2rem;
   font-family: var(--slantedText);
   color: var(--primaryColor);
   /* animation */
-
+  animation: SlideFromtheRight 5s ease-in-out 1;
 
 }
 .banner-title{
@@ -65,6 +73,8 @@ a{
   color: var(--mainWhite);
   margin-top: 2.5rem;
   line-height: 1.3;
+  /* animation */
+  animation: SlideFromtheLeft 5s ease-in-out 1;
 }
 
 .main-btn, .banner-btn{
@@ -84,4 +94,126 @@ a{
 .main-btn:hover, .banner-btn:hover{
   color: var(--mainWhite);
   opacity: 0.7;
+  
 }
+.banner-btn{
+  padding: 1.2rem 1.5rem;
+  animation: show 5s ease-in-out 1;
+}
+
+/* end of headerr */
+
+/* animation */
+@keyframes show{
+  0% {
+    transform: scale(2);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes SlideFromtheRight{
+  0% {
+    transform: translateX(1000px);
+  }
+  50% {
+    transform: translateX(-200px);
+  }
+  75% {
+    transform: translateX(50px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes SlideFromtheLeft{
+  0% {
+    transform: translateX(-1000px);
+  }
+  50% {
+    transform: translateX(200px);
+  }
+  75% {
+    transform: translateX(-50px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+/* endofanimation */
+
+/* content-divider */
+.content-divider{
+  height: 0.5rem;
+  background: linear-gradient(to left, var(--primaryColor), var(--secondaryColor), var(--primaryColor));
+}
+/* end of content-divider */
+
+/* skills */
+.skills{
+  background: var(--mainGrey);
+  
+}
+
+.skill{
+  padding: 2.5rem 0;
+  text-align: center;
+  transition: var(--mainTransition);
+}
+.skill-icon{
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  display: inline-block;
+  transition: var(--mainTransition);
+}
+.skill-title{
+  font-size: 0.9rem;
+  font-weight: bold; 
+  color: var(--primaryColor);
+  text-transform: uppercase;
+  letter-spacing: var(--letterSpacing);
+  margin-bottom: 1.5rem;
+}
+
+.skill-text{
+  max-width: 13rem;
+  margin: 0 auto; 
+}
+
+.skill:hover{
+  background: var(--primaryColor);
+
+}
+.skill:hover .skill-title{
+  color: var(--mainWhite);
+
+}
+.skill:hover .skill-icon{
+  transform: translateY(-5px);
+
+}
+
+@media screen and (min-width: 576px) {
+  .skill{
+    float: left;
+    width: 50%;
+  }
+  
+}
+
+@media screen and (min-width: 1200px) {
+  .skill{
+    width: 25%;
+  }
+  
+}
+
+
+
+
+/* end of skills */
